; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_core/extr_mlx4_mr.c_mlx4_fmr_free.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_core/extr_mlx4_mr.c_mlx4_fmr_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_dev = type { i32 }
%struct.mlx4_fmr = type { %struct.TYPE_2__, i64 }
%struct.TYPE_2__ = type { i32 }

@EBUSY = common dso_local global i32 0, align 4
@MLX4_MPT_DISABLED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlx4_fmr_free(%struct.mlx4_dev* %0, %struct.mlx4_fmr* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mlx4_dev*, align 8
  %5 = alloca %struct.mlx4_fmr*, align 8
  %6 = alloca i32, align 4
  store %struct.mlx4_dev* %0, %struct.mlx4_dev** %4, align 8
  store %struct.mlx4_fmr* %1, %struct.mlx4_fmr** %5, align 8
  %7 = load %struct.mlx4_fmr*, %struct.mlx4_fmr** %5, align 8
  %8 = getelementptr inbounds %struct.mlx4_fmr, %struct.mlx4_fmr* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i32, i32* @EBUSY, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %3, align 4
  br label %28

14:                                               ; preds = %2
  %15 = load %struct.mlx4_dev*, %struct.mlx4_dev** %4, align 8
  %16 = load %struct.mlx4_fmr*, %struct.mlx4_fmr** %5, align 8
  %17 = getelementptr inbounds %struct.mlx4_fmr, %struct.mlx4_fmr* %16, i32 0, i32 0
  %18 = call i32 @mlx4_mr_free(%struct.mlx4_dev* %15, %struct.TYPE_2__* %17)
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %14
  %22 = load i32, i32* %6, align 4
  store i32 %22, i32* %3, align 4
  br label %28

23:                                               ; preds = %14
  %24 = load i32, i32* @MLX4_MPT_DISABLED, align 4
  %25 = load %struct.mlx4_fmr*, %struct.mlx4_fmr** %5, align 8
  %26 = getelementptr inbounds %struct.mlx4_fmr, %struct.mlx4_fmr* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  store i32 %24, i32* %27, align 8
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %23, %21, %11
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @mlx4_mr_free(%struct.mlx4_dev*, %struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
